Criação do migration

--- a/Biblioteca/appsettings.json
+++ b/Biblioteca/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BibliotecaContext": "Server=silly.db.elephantsql.com;Port=5432;Userid=ghjarbjw;Password=gG17RWnHd8sssc52mAarKDm0J_8J5OHv;Database=ghjarbjw"
+  }
 }
